update direct steam lookup endpoint
